--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://images.vexels.com/media/users/3/321264/isolated/preview/cfabfc57c1ea0517d56456ad31b4bc51-a-cone-da-ca-mera-de-cinema.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Gerenciador de Filmes</title>
   </head>
   <body>
     <div id="root"></div>
